--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "egg-knex",
+  "name": "@joyu/egg-knex",
   "version": "3.0.1",
-  "description": "knex plugin for egg",
+  "description": "knex plugin for egg by joyu team",
   "eggPlugin": {
     "name": "knex"
   },
@@ -48,68 +48,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/okoala/egg-knex.git"
+    "url": "git+https://github.com/joyutech/egg-knex.git"
   },
   "bugs": {
-    "url": "https://github.com/okoala/egg-knex/issues"
+    "url": "https://github.com/joyutech/egg-knex/issues"
   },
-  "homepage": "https://github.com/okoala/egg-knex#readme",
-  "author": "Koala Huang<dapixp@gmail.com>",
-  "license": "MIT",
-  "contributors": [
-    {
-      "name": "仙森",
-      "email": null,
-      "url": "https://github.com/okoala",
-      "contributions": 8,
-      "additions": 695,
-      "deletions": 17,
-      "hireable": null
-    },
-    {
-      "name": "Yanan Che",
-      "email": null,
-      "url": "https://github.com/yolopunk",
-      "contributions": 2,
-      "additions": 7,
-      "deletions": 5,
-      "hireable": true
-    },
-    {
-      "name": "jiaxin",
-      "email": null,
-      "url": "https://github.com/solarhell",
-      "contributions": 1,
-      "additions": 5,
-      "deletions": 5,
-      "hireable": null
-    },
-    {
-      "name": null,
-      "email": null,
-      "url": "https://github.com/m31271n",
-      "contributions": 4,
-      "additions": 107,
-      "deletions": 127,
-      "hireable": null
-    },
-    {
-      "name": "Cemre Mengu",
-      "email": null,
-      "url": "https://github.com/cemremengu",
-      "contributions": 3,
-      "additions": 23,
-      "deletions": 7,
-      "hireable": null
-    },
-    {
-      "name": "sunfuze",
-      "email": null,
-      "url": "https://github.com/sunfuze",
-      "contributions": 19,
-      "additions": 3085,
-      "deletions": 817,
-      "hireable": null
-    }
-  ]
+  "homepage": "https://github.com/joyutech/egg-knex#readme",
+  "author": "joyu team",
+  "license": "MIT"
 }
