--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "url": "https://github.com/joyutech/egg-knex/issues"
   },
   "homepage": "https://github.com/joyutech/egg-knex#readme",
-  "author": "joyu team",
+  "author": "Joyu Team",
   "license": "MIT"
 }
