--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.7.2",
     "co": "^4.6.0",
     "knex": "^2.1.0",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
   },
